--- a/python/test/geospatial/templates/map.html
+++ b/python/test/geospatial/templates/map.html
@@ -15,30 +15,38 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.heat/0.2.0/leaflet-heat.js" integrity="sha512-KhIBJeCI4oTEeqOmRi2gDJ7m+JARImhUYgXWiOTIp9qqySpFUAJs09erGKem4E5IPuxxSTjavuurvBitBmwE0w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.4.2/chroma.min.js" integrity="sha512-zInFF17qBFVvvvFpIfeBzo7Tj7+rQxLeTJDmbxjBz5/zIr89YVbTNelNhdTT+/DCrxoVzBeUPVFJsczKbB7sew==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <!-- Include the Leaflet CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css" integrity="sha512-Zcn6bjR/8RZbLEpLIeOwNtzREBAJnUKESxces60Mpoj+2okopSAcSUIUOseddDm0cxnGQzxIR7vJgsLZbdLE3w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js" integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap-grid.min.css" integrity="sha512-i1b/nzkVo97VN5WbEtaPebBG8REvjWeqNclJ6AItj7msdVcaveKrlIIByDpvjk5nwHjXkIqGZscVxOrTb9tsMA==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     
-    <!-- Leaflet JavaScript -->
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    
-    <!-- Leaflet AJAX plugin -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
+  
+  
 
     <style>
         #data-table table {
-            width: 100%;
+            width: 60%;
             border-collapse: collapse;
         }
         #data-table th, #data-table td {
             border: 1px solid #ddd;
             padding: 8px;
             text-align: left;
+            word-wrap: break-word;
+            overflow-wrap: break-word;
+            
         }
+       
         #data-table tr:nth-child(even){background-color: #f2f2f2;}
         #data-table tr:hover {background-color: #ddd;}
 
         .map-container {
             display: flex;
             justify-content: space-around; /* This will space out the maps evenly. */
-            align-items: center; /* This aligns the maps vertically in the center, if needed. */
+            align-items: center;
+            /* This aligns the maps vertically in the center, if needed. */
         }
 
         /* Optional: If you want the maps to be responsive and fit better in smaller viewports, you might consider adding a media query like this */
@@ -56,26 +64,55 @@
 </head>
 </head>   
 <body>
-    <select id="sheet-select"></select>
+    <div style="margin: 20px; padding: 30px;">
+        <div>Pirmā indikatora izvēle
+            <select id="sheet-select1"></select>
+        </div>
+        
+        <div>otrā indikatora izvēle
+            <select id="sheet-select2"></select>
+        </div>
+        <div>Trešā indikatora izvēle
+            <select id="sheet-select3"></select>
+        </div>
+        <div>Ceturtā indikatora izvēle
+            <select id="sheet-select4"></select>
+        </div>
+        <button id="update-button">Update maps</button>
+    
+   
+    
+    
+
     {{ map_html | safe}},
     {{ map_html2 | safe}},
     <select id="year-select">
         <!-- Options will be dynamically populated -->
       </select>
       <div class="map-container">    
-        <div id="mapid" style="width: 1000px; height: 600px;"></div>
-        <div id="mapid2" style="width: 1000px; height: 600px;"></div>
+        <div id="mapid" style="width: 33%; height: 600px;"></div>
+        <div id="mapid2" style="width: 33%; height: 600px;"></div>
+        <div id="mapid3" style="width: 33%;  height: 600px;"></div>
         </div>
-    
-    <div id="data-table">
-        <h3>Selected Region Data</h3>
-        <table id="region-data">
-            <!-- Table content will be dynamically inserted here -->
-        </table>
-       
+        <div class="map-container">
+            <div id="mapid4" style="width: 50%;  height: 600px;"></div>
+            <div id="mainMapId" style="width: 50%; height: 600px;"></div>
+        </div>
+        
+        
+    <div class="data-table">
+        <div id="data-table">
+            <h3>Selected Region Data</h3>
+            <table id="region-data">
+                <!-- Table content will be dynamically inserted here -->
+            </table>
+           
+    </div>
+    </div>
 </div>
 <script src="../static/mapHandler.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chroma-js@2.1.0/chroma.min.js"></script>
+
 
 
 
