--- a/python/test/geospatial/templates/map.html
+++ b/python/test/geospatial/templates/map.html
@@ -7,7 +7,7 @@
     crossorigin=""/>
     <meta charset="UTF-8">
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.9.0/d3.js" integrity="sha512-iiZOijMkLFQSa43AyuzD6p176GJlnhWXEv7loEZFkCDpFQvZCijZLE6U8IRpAIb53KagIIwhSwHWTgsDlci/jw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
@@ -38,47 +38,60 @@
             .map-container { flex-direction: column; }
         }
     </style>
-</head>
-</head>   
-<body>
-    <div class="container mt-4">
-        <div class="form-upload">
-            <form id="file-upload-form" action="/upload" method="POST" enctype="multipart/form-data">
-                <input class="form-control" type="file" name="file" id="file-input">
-                <button class="btn btn-primary mt-2" type="submit">Upload File</button>
-            </form>
+    </head>
+     
+    <body>
+        <div class="container mt-4">
+            <label class="form-label">Pievienot jaunu excel datu failu</label>
+            <div class="form-upload">
+
+                <form id="file-upload-form" action="/upload" method="POST" enctype="multipart/form-data">
+                    <input class="form-control" type="file" name="file" id="file-input">
+                    <button class="btn btn-primary mt-2" type="submit">Upload File</button>
+                </form>
+            </div>
+            
+            <div class="selectors mb-4">
+                <label class="form-label">Izvēlies kura faila datus attēlot uz kartēm</label>
+                <select id="xlsx-file-select" class="form-select">
+                    
+                    <option >Izvēlieties failu, kuru izmantot datiem</option>
+                </select>
+                <select id="sheet-select1" class="form-select"></select>
+                <select id="sheet-select2" class="form-select"></select>
+                <select id="sheet-select3" class="form-select"></select>
+                <select id="sheet-select4" class="form-select"></select>
+                <select id="year-select" class="form-select"></select>
+
+                
+                <button id="update-button" class="btn btn-secondary">Update maps</button>
+                <button id="clear-layers-button" class="btn btn-danger">Clear All Layers</button>
+                
+
+            </div>
+        
+            <div class="map-container">    
+                <div id="mapid"></div>
+                <div id="mapid2"></div>
+                <div id="mapid3"></div>
+                <div id="mapid4"></div>
+                <div id="mainMapId"></div>
+            </div>
+            <div id="d3-container">
+                
+            </div>
+            <div id="region-data">
+                <h3>Selected Region Data</h3>
+                <table class="table table-striped">
+                    <!-- Table content will be dynamically inserted here -->
+                </table>
+            </div>
         </div>
         
-        <div class="selectors mb-4">
-            <select id="sheet-select1" class="form-select"></select>
-            <select id="sheet-select2" class="form-select"></select>
-            <select id="sheet-select3" class="form-select"></select>
-            <select id="sheet-select4" class="form-select"></select>
-            <select id="year-select" class="form-select"></select>
-            <button id="update-button" class="btn btn-secondary">Update maps</button>
-            <button id="clear-layers-button" class="btn btn-danger">Clear All Layers</button>
-
-        </div>
-    
-        <div class="map-container">    
-            <div id="mapid"></div>
-            <div id="mapid2"></div>
-            <div id="mapid3"></div>
-            <div id="mapid4"></div>
-            <div id="mainMapId"></div>
-        </div>
-    
-        <div id="data-table">
-            <h3>Selected Region Data</h3>
-            <table class="table table-striped">
-                <!-- Table content will be dynamically inserted here -->
-            </table>
-        </div>
-    </div>
-    
-    <!-- Scripts -->
-    <script src="../static/mapHandler.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chroma-js@2.1.0/chroma.min.js"></script>
-    <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <!-- Scripts -->
+        <script src="../static/mapHandler.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chroma-js@2.1.0/chroma.min.js"></script>
+        <!-- Bootstrap Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
+</html>
