--- a/python/test/geospatial/templates/map.html
+++ b/python/test/geospatial/templates/map.html
@@ -1,97 +1,106 @@
 <!DOCTYPE html>
+<html>
 
-    <head>
+<head>
     <title>geospatial visualisation</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-    crossorigin=""/>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap-grid.min.css" integrity="sha512-i1b/nzkVo97VN5WbEtaPebBG8REvjWeqNclJ6AItj7msdVcaveKrlIIByDpvjk5nwHjXkIqGZscVxOrTb9tsMA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.9.0/d3.js" integrity="sha512-iiZOijMkLFQSa43AyuzD6p176GJlnhWXEv7loEZFkCDpFQvZCijZLE6U8IRpAIb53KagIIwhSwHWTgsDlci/jw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-    crossorigin=""></script>
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.heat/0.2.0/leaflet-heat.js" integrity="sha512-KhIBJeCI4oTEeqOmRi2gDJ7m+JARImhUYgXWiOTIp9qqySpFUAJs09erGKem4E5IPuxxSTjavuurvBitBmwE0w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.4.2/chroma.min.js" integrity="sha512-zInFF17qBFVvvvFpIfeBzo7Tj7+rQxLeTJDmbxjBz5/zIr89YVbTNelNhdTT+/DCrxoVzBeUPVFJsczKbB7sew==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-    <!-- Include the Leaflet CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css" integrity="sha512-Zcn6bjR/8RZbLEpLIeOwNtzREBAJnUKESxces60Mpoj+2okopSAcSUIUOseddDm0cxnGQzxIR7vJgsLZbdLE3w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js" integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap-grid.min.css" integrity="sha512-i1b/nzkVo97VN5WbEtaPebBG8REvjWeqNclJ6AItj7msdVcaveKrlIIByDpvjk5nwHjXkIqGZscVxOrTb9tsMA==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    
-  
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-    <!-- Custom Styles -->
     <style>
-        .map-container { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; }
-        .map-container > div { flex: 1 1 300px; /* Minimum width of 300px */ height: 400px; }
-        #data-table { margin-top: 20px; }
-        #data-table table { width: 100%; }
-        .form-upload { margin-bottom: 20px; }
-        .form-select { margin-bottom: 10px; }
+        .map-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        .map-container>div {
+            flex: 1 1 300px;
+            /* Minimum width of 300px */
+            height: 400px;
+        }
+
+        #data-table {
+            margin-top: 20px;
+        }
+
+        #data-table table {
+            width: 100%;
+        }
+
+        .form-upload {
+            margin-bottom: 20px;
+        }
+
+        .form-select {
+            margin-bottom: 10px;
+        }
+
         @media (max-width: 768px) {
-            .map-container { flex-direction: column; }
+            .map-container {
+                flex-direction: column;
+            }
         }
     </style>
-    </head>
-     
-    <body>
-        <div class="container mt-4">
-            <label class="form-label">Pievienot jaunu excel datu failu</label>
-            <div class="form-upload">
+</head>
 
-                <form id="file-upload-form" action="/upload" method="POST" enctype="multipart/form-data">
-                    <input class="form-control" type="file" name="file" id="file-input">
-                    <button class="btn btn-primary mt-2" type="submit">Upload File</button>
-                </form>
-            </div>
-            
-            <div class="selectors mb-4">
-                <label class="form-label">Izvēlies kura faila datus attēlot uz kartēm</label>
-                <select id="xlsx-file-select" class="form-select">
-                    
-                    <option >Izvēlieties failu, kuru izmantot datiem</option>
-                </select>
-                <select id="sheet-select1" class="form-select"></select>
-                <select id="sheet-select2" class="form-select"></select>
-                <select id="sheet-select3" class="form-select"></select>
-                <select id="sheet-select4" class="form-select"></select>
-                <select id="year-select" class="form-select"></select>
-
-                
-                <button id="update-button" class="btn btn-secondary">Update maps</button>
-                <button id="clear-layers-button" class="btn btn-danger">Clear All Layers</button>
-                
-
-            </div>
-        
-            <div class="map-container">    
-                <div id="mapid"></div>
-                <div id="mapid2"></div>
-                <div id="mapid3"></div>
-                <div id="mapid4"></div>
-                <div id="mainMapId"></div>
-            </div>
-            <div id="d3-container">
-                
-            </div>
-            <div id="region-data">
-                <h3>Selected Region Data</h3>
-                <table class="table table-striped">
-                    <!-- Table content will be dynamically inserted here -->
-                </table>
-            </div>
+<body>
+    <div class="container mt-4">
+        <label class="form-label">Pievienot jaunu excel datu failu</label>
+        <div class="form-upload">
+            <form id="file-upload-form" action="/upload" method="POST" enctype="multipart/form-data">
+                <input class="form-control" type="file" name="file" id="file-input">
+                <button class="btn btn-primary mt-2" type="submit">Upload File</button>
+            </form>
         </div>
-        
-        <!-- Scripts -->
-        <script src="../static/mapHandler.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/chroma-js@2.1.0/chroma.min.js"></script>
-        <!-- Bootstrap Bundle with Popper -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    </body>
+        <select id="visualizationType">
+            <option value="choropleth">Choropleth</option>
+            <option value="heatmap">Heatmap</option>
+            <option value="dotmap">Dot Map</option>
+        </select>
+        <div class="selectors mb-4">
+            <label class="form-label">Izvēlies kura faila datus attēlot uz kartēm</label>
+            <select id="xlsx-file-select" class="form-select">
+                <option>Izvēlieties failu, kuru izmantot datiem</option>
+            </select>
+            <select id="sheet-select1" class="form-select"></select>
+            <select id="sheet-select2" class="form-select"></select>
+            <select id="sheet-select3" class="form-select"></select>
+            <select id="sheet-select4" class="form-select"></select>
+            <select id="year-select" class="form-select"></select>
+
+            <button id="update-button" class="btn btn-secondary">Update maps</button>
+            <button id="clear-layers-button" class="btn btn-danger">Clear All Layers</button>
+
+        </div>
+
+        <div class="map-container">
+            <div id="mapid"></div>
+            <div id="mapid2"></div>
+            <div id="mapid3"></div>
+            <div id="mapid4"></div>
+            <div id="mapid5"></div>
+        </div>
+        <div id="d3-container"></div>
+        <div id="region-data">
+            <h3>Selected Region Data</h3>
+            <table class="table table-striped">
+                <!-- Table content will be dynamically inserted here -->
+            </table>
+        </div>
+    </div>
+
+    <!-- Scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.9.0/d3.js" integrity="sha512-iiZOijMkLFQSa43AyuzD6p176GJlnhWXEv7loEZFkCDpFQvZCijZLE6U8IRpAIb53KagIIwhSwHWTgsDlci/jw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+    <script src="https://cdn.jsdelivr.net/npm/@turf/turf"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.4.2/chroma.min.js" integrity="sha512-zInFF17qBFVvvvFpIfeBzo7Tj7+rQxLeTJDmbxjBz5/zIr89YVbTNelNhdTT+/DCrxoVzBeUPVFJsczKbB7sew==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.heat/0.2.0/leaflet-heat.js" integrity="sha512-KhIBJeCI4oTEeqOmRi2gDJ7m+JARImhUYgXWiOTIp9qqySpFUAJs09erGKem4E5IPuxxSTjavuurvBitBmwE0w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="../static/mapHandler.js"></script>
+</body>
+
 </html>
