--- a/python/test/geospatial/templates/map.html
+++ b/python/test/geospatial/templates/map.html
@@ -59,6 +59,7 @@
             <option value="choropleth">Choropleth</option>
             <option value="heatmap">Heatmap</option>
             <option value="dotmap">Dot Map</option>
+            <option value="bivariate">Bivariate</option>
         </select>
         <div class="selectors mb-4">
             <label class="form-label">Izvēlies kura faila datus attēlot uz kartēm</label>
