fix city data merging, add dockerfile

--- a/python/test/geospatial/templates/map.html
+++ b/python/test/geospatial/templates/map.html
@@ -84,7 +84,10 @@
             <div id="mapid4"></div>
             <div id="mapid5"></div>
         </div>
-        <div id="d3-container"></div>
+        <div id="d3-container">
+        <div id="legend-container" style="width: 300px; height: 300px;"></div>
+        </div>
+        
         <div id="region-data">
             <h3>Selected Region Data</h3>
             <table class="table table-striped">
