--- a/python/test/geospatial/templates/map.html
+++ b/python/test/geospatial/templates/map.html
@@ -82,10 +82,12 @@
             <div id="mapid2"></div>
             <div id="mapid3"></div>
             <div id="mapid4"></div>
-            <div id="mapid5"></div>
+            
         </div>
         <div id="d3-container">
         <div id="legend-container" style="width: 300px; height: 300px;"></div>
+        <div id="info-panel" style="padding: 10px; border: 1px solid #ccc; margin-top: 20px; width: 300px;"></div>
+        <div id="tooltip" style="position: absolute; display: none; background: #fff; border: 1px solid #000; padding: 10px;"></div>
         </div>
         
         <div id="region-data">
