--- a/python/test/geospatial/templates/map.html
+++ b/python/test/geospatial/templates/map.html
@@ -37,7 +37,19 @@
         .form-select {
             margin-bottom: 10px;
         }
+        .spinner {
+        border: 4px solid rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+        border-top: 4px solid #000;
+        width: 40px;
+        height: 40px;
+        animation: spin 2s linear infinite;
+        }
 
+        @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+        }
         @media (max-width: 768px) {
             .map-container {
                 flex-direction: column;
@@ -52,7 +64,7 @@
         <div class="form-upload">
             <form id="file-upload-form" action="/upload" method="POST" enctype="multipart/form-data">
                 <input class="form-control" type="file" name="file" id="file-input">
-                <button class="btn btn-primary mt-2" type="submit">Upload File</button>
+                <button class="btn btn-primary mt-2" type="submit">Pievienot jaunu failu</button>
             </form>
         </div>
         <select id="visualizationType">
@@ -66,14 +78,15 @@
             <select id="xlsx-file-select" class="form-select">
                 <option>Izvēlieties failu, kuru izmantot datiem</option>
             </select>
+            <div id="loadingIndicator" class="spinner" style="display: none;"></div>
             <select id="sheet-select1" class="form-select"></select>
             <select id="sheet-select2" class="form-select"></select>
             <select id="sheet-select3" class="form-select"></select>
             <select id="sheet-select4" class="form-select"></select>
             <select id="year-select" class="form-select"></select>
 
-            <button id="update-button" class="btn btn-secondary">Update maps</button>
-            <button id="clear-layers-button" class="btn btn-danger">Clear All Layers</button>
+            <button id="update-button" class="btn btn-secondary">Atjaunot kartes</button>
+            <button id="clear-layers-button" class="btn btn-danger">Nodzēst slāņus</button>
 
         </div>
 
@@ -84,15 +97,21 @@
             <div id="mapid4"></div>
             
         </div>
-        <div id="legend-container" style="width: 300px; height: 300px;"></div>
-        <div id="d3-container">
+        <div class="mt-2">
+            <div id="legend-container" style="width: 300px; height: 50px;">        
         
-        <div id="info-panel" style="padding: 10px; border: 1px solid #ccc; margin-top: 20px; width: 300px;"></div>
+            </div>
+        </div>
+        
+        
+        <div id="d3-container">
+          
+        
         <div id="tooltip" style="position: absolute; display: none; background: #fff; border: 1px solid #000; padding: 10px;"></div>
         </div>
         
         <div id="region-data">
-            <h3>Selected Region Data</h3>
+            <h3>Atlasītās teritorijas dati</h3>
             <table class="table table-striped">
                 <!-- Table content will be dynamically inserted here -->
             </table>
