--- a/python/test/geospatial/templates/map.html
+++ b/python/test/geospatial/templates/map.html
@@ -15,7 +15,12 @@
             justify-content: center;
             gap: 20px;
         }
-
+        .d3-container{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+        }
         .map-container>div {
             flex: 1 1 300px;
             /* Minimum width of 300px */
