--- a/python/test/geospatial/templates/map.html
+++ b/python/test/geospatial/templates/map.html
@@ -90,7 +90,7 @@
             <div id="loadingOverlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); z-index:1000;">
                 <div style="position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); color:white;">Lūdzu uzgaidiet, kamēr dati tiek apstrādāti...</div>
             </div>
-            <label class="form-label">Izvēlieties rādītājus, kurus attēlot. </label>
+            <label class="form-label">Izvēlieties rādītājus, kurus attēlot. Katrs izkrītošais saraksts atbild par savu karti</label>
             <div id="loadingIndicator" class="spinner" style="display: none;"></div>
             <select id="sheet-select1" class="form-select"></select>
             <select id="sheet-select2" class="form-select"></select>
