--- a/python/test/geospatial/templates/map.html
+++ b/python/test/geospatial/templates/map.html
@@ -90,9 +90,12 @@
             <div id="loadingOverlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); z-index:1000;">
                 <div style="position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); color:white;">Lūdzu uzgaidiet, kamēr dati tiek apstrādāti...</div>
             </div>
-            <label class="form-label">Izvēlieties rādītājus, kurus attēlot. Katrs izkrītošais saraksts atbild par savu karti</label>
+            <label class="form-label">Izvēlieties rādītājus, kurus attēlot. Katrs izkrītošais saraksts atbild par savu karti.
+                 Divu indikatoru vizualizācijai tiek izmantots 1. un 2. izkrītošais saraksts</label>
             <div id="loadingIndicator" class="spinner" style="display: none;"></div>
+            
             <select id="sheet-select1" class="form-select"></select>
+            
             <select id="sheet-select2" class="form-select"></select>
             <select id="sheet-select3" class="form-select"></select>
             <select id="sheet-select4" class="form-select"></select>
@@ -113,7 +116,8 @@
             
         </div>
         <div class="mt-2">
-            <div id="legend-container" style="width: 300px; height: 50px;">        
+            
+            <div id="legend-container" style="width: 400px; height: 70px;">        
         
             </div>
         </div>
